--- a/langchain/27-添加消息历史记录.ipynb
+++ b/langchain/27-添加消息历史记录.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='余弦是直角三角形中邻边与斜边的比值，或单位圆上的横坐标。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 36, 'prompt_tokens': 32, 'total_tokens': 68, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-4d7c06a2-d5c7-4135-9d9d-d16baa50b872-0', usage_metadata={'input_tokens': 32, 'output_tokens': 36, 'total_tokens': 68, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='余弦是三角函数之一，表示直角三角形中，邻边与斜边之比。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 56, 'total_tokens': 87, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-58d60d1c-10de-4d2b-98f0-4d73b8730380-0', usage_metadata={'input_tokens': 56, 'output_tokens': 31, 'total_tokens': 87, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='余弦是直角三角形中邻边与斜边的比值，或单位圆上角的横坐标。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 37, 'prompt_tokens': 67, 'total_tokens': 104, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-5e936010-1ec6-4dea-a99e-92b70071f7ae-0', usage_metadata={'input_tokens': 67, 'output_tokens': 37, 'total_tokens': 104, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='余弦是三角函数，用于表示直角三角形中，邻边与斜边之比。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 101, 'total_tokens': 132, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-3cc1f619-4b05-405f-ba96-6500b11d06b2-0', usage_metadata={'input_tokens': 101, 'output_tokens': 31, 'total_tokens': 132, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='可以，请问具体是指哪部分内容？', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 13, 'prompt_tokens': 34, 'total_tokens': 47, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-c7d30a75-f8c0-4ea3-9c9c-00c2fbe1045e-0', usage_metadata={'input_tokens': 34, 'output_tokens': 13, 'total_tokens': 47, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='擅长math，简洁概要回答问题。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 53, 'total_tokens': 71, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-9fc7a42b-0d74-4a4c-bdbd-d43dccd67bad-0', usage_metadata={'input_tokens': 53, 'output_tokens': 18, 'total_tokens': 71, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='余弦是角度的三角函数，表示直角三角形中邻边与斜边的比值。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 32, 'total_tokens': 63, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-82beed13-b3ba-4832-b1ba-3c781a6891c6-0', usage_metadata={'input_tokens': 32, 'output_tokens': 31, 'total_tokens': 63, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='余弦是三角函数中的一种，表示直角三角形中，邻边与斜边的比值。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 34, 'prompt_tokens': 56, 'total_tokens': 90, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-486cc896-1ff1-4f32-a51c-a12b571d9fb1-0', usage_metadata={'input_tokens': 56, 'output_tokens': 34, 'total_tokens': 90, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,16 +256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'output_message': AIMessage(content='**二元一次方程**（也称为**二元一次方程组**的单个方程）是指含有两个变量的线性方程，其中每个变量的次数都是1。通常，这种方程的标准形式为：\\n\\n\\\\[\\nAx + By = C\\n\\\\]\\n\\n其中，**x** 和 **y** 是变量，**A**、**B** 和 **C** 是常数，且 **A** 和 **B** 不同时为零。\\n\\n### 二元一次方程的特点：\\n1. **含有两个变量**：方程中有两个未知数，通常用 **x** 和 **y** 表示。\\n2. **线性关系**：方程中的变量的指数都是1，意味着它表示的是一条直线。\\n3. **常数与系数**：方程的右边是常数 **C**，左边包含两个项，分别由 **x** 和 **y** 与常数 **A** 和 **B** 相乘。\\n\\n### 例子：\\n1. \\\\( 2x + 3y = 6 \\\\)\\n2. \\\\( x - 4y = 7 \\\\)\\n3. \\\\( 5x + 2y = 10 \\\\)\\n\\n这些方程都是二元一次方程，表示的是平面上的一条直线。\\n\\n### 解二元一次方程\\n解二元一次方程的目的是找出 **x** 和 **y** 的具体值。由于二元一次方程通常有无数解（因为它表示的是一条直线），但如果给定了特定的条件（比如通过另一个方程），可以通过代数方法找到一个确定的解。\\n\\n#### 常见解法：\\n1. **代入法**：通过解其中一个方程来表示一个变量（例如 \\\\(x\\\\)）为另一个变量的函数，代入另一个方程解得另一个变量（例如 \\\\(y\\\\)）。\\n2. **消元法**：通过将两个方程相加或相减，消去其中一个变量，从而得到另一个变量的解。\\n3. **图像法**：将方程转化为图像（直线方程），然后通过观察直线的交点来解得方程的解。\\n\\n### 举例说明解法：\\n假设我们有以下方程组：\\n\\\\[\\n2x + 3y = 6\\n\\\\]\\n\\\\[\\nx - 4y = 7\\n\\\\]\\n\\n**代入法**：\\n1. 从第二个方程 \\\\(x = 4y + 7\\\\) 解出 **x**。\\n2. 将 **x** 代入第一个方程：\\n   \\\\[\\n   2(4y + 7) + 3y = 6\\n   \\\\]\\n   展开后得到：\\n   \\\\[\\n   8y + 14 + 3y = 6\\n   \\\\]\\n   合并同类项：\\n   \\\\[\\n   11y + 14 = 6\\n   \\\\]\\n   解得：\\n   \\\\[\\n   11y = -8 \\\\quad \\\\Rightarrow \\\\quad y = -\\\\frac{8}{11}\\n   \\\\]\\n3. 将 **y = -\\\\frac{8}{11}** 代入 \\\\(x = 4y + 7\\\\) 中，得到：\\n   \\\\[\\n   x = 4 \\\\times \\\\left(-\\\\frac{8}{11}\\\\right) + 7 = -\\\\frac{32}{11} + \\\\frac{77}{11} = \\\\frac{45}{11}\\n   \\\\]\\n\\n所以，解是 \\\\(x = \\\\frac{45}{11}\\\\)，\\\\(y = -\\\\frac{8}{11}\\\\)。\\n\\n### 图像表示：\\n在平面坐标系中，二元一次方程表示的是一条直线。解方程的过程可以理解为找出这条直线的交点。在给定的方程组中，如果两条直线相交，则有唯一解；如果平行，则无解；如果重合，则有无数解。\\n\\n### 总结：\\n- **二元一次方程**是形如 \\\\(Ax + By = C\\\\) 的方程，表示一个平面上的直线。\\n- 解这类方程的方法包括代入法、消元法等，解的方式取决于方程是否独立以及是否有其他条件限制。\\n- **二元一次方程**在实际应用中非常常见，尤其在解决几何问题、经济模型、物理问题等方面。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 1105, 'prompt_tokens': 8, 'total_tokens': 1113, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-33493c19-1652-4d81-91dd-f10c019f202c-0', usage_metadata={'input_tokens': 8, 'output_tokens': 1105, 'total_tokens': 1113, 'input_token_details': {}, 'output_token_details': {}})}"
+       "{'output_message': AIMessage(content='二元一次方程是指含有两个未知数的一次方程。一般形式为ax + by = c，其中a、b、c为已知数，x、y为未知数。解二元一次方程通常需要找到x和y的值，使得方程成立。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 78, 'prompt_tokens': 18, 'total_tokens': 96, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-5f5f2330-ed0f-4379-b217-4836f10875dd-0', usage_metadata={'input_tokens': 18, 'output_tokens': 78, 'total_tokens': 96, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,16 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'output_message': AIMessage(content='**未知数**（也称为**变量**）是指在数学问题或方程中尚未确定、需要求解的数量。在方程或表达式中，未知数通常用字母表示，例如 **x**、**y**、**z** 等。\\n\\n### 1. **未知数的作用**：\\n在数学中，未知数用来表示尚不清楚的数值。它们出现在代数方程、表达式、方程组、函数等中，通常是我们希望通过解方程来找出的数。换句话说，未知数是我们要求解的对象。\\n\\n例如：\\n- 在方程 \\\\( 2x + 5 = 11 \\\\) 中，**x** 是未知数。我们需要通过解这个方程来找出 **x** 的值。\\n- 在几何问题中，未知数可以表示某个边长、角度或其他数量。\\n\\n### 2. **未知数的符号**：\\n在数学中，未知数通常使用字母来表示。常见的字母包括：\\n- **x**, **y**, **z**：常用于表示代数中的未知数，尤其在一元或二元方程中。\\n- **a**, **b**, **c**：常用于表示常数，或者在几何中用来表示特定的长度或坐标。\\n- **t**, **s** 等：通常用于表示时间、速度、位置等动态量。\\n\\n### 3. **如何求解未知数**：\\n通过给定的方程、条件或模型，未知数的值通常通过代数运算（如加、减、乘、除、开方等）来求解。常见的求解方法包括：\\n- **代入法**：将一个方程中的某个未知数表示成另一个未知数的形式，并代入另一个方程进行求解。\\n- **消元法**：通过对方程进行加减操作，消去一个未知数，最终求出另一个未知数的值。\\n- **代数运算**：通过对方程进行直接运算，如移项、因式分解等，来求解未知数。\\n\\n例如：\\n- 对于方程 \\\\( 3x - 5 = 10 \\\\)，可以通过移项求解：\\n  \\\\[\\n  3x = 10 + 5\\n  \\\\]\\n  \\\\[\\n  3x = 15\\n  \\\\]\\n  \\\\[\\n  x = 5\\n  \\\\]\\n  这时，**x** 就是未知数，解得 **x = 5**。\\n\\n### 4. **未知数与常数的区别**：\\n- **常数**（如 2、5、7 等）是已经确定的数值。\\n- **未知数** 是我们需要求解的数值，它在问题中通常没有明确的数值，需要通过计算、推理等方法得出。\\n\\n### 5. **未知数的实际应用**：\\n未知数在许多实际问题中都有广泛应用。例如：\\n- **数学建模**：在物理、经济、工程等领域，未知数用来表示需要解决的问题中的未知量，如速度、时间、成本等。\\n- **代数方程**：例如，求解物体的速度、距离、时间等问题，通常需要设置未知数来表示这些量，然后用方程进行求解。\\n- **统计学**：在回归分析等统计问题中，未知数可以用来表示我们通过数据拟合所要确定的参数（例如斜率、截距等）。\\n\\n### 6. **未知数的种类**：\\n- **一元未知数**：方程中只有一个未知数的情况。例如，方程 \\\\( 2x + 3 = 7 \\\\) 中，只有一个未知数 **x**。\\n- **二元未知数**：方程中有两个未知数，通常表示平面上的直线或平面。例如，方程 \\\\( 2x + 3y = 6 \\\\) 中，未知数是 **x** 和 **y**。\\n- **多元未知数**：方程中含有多个未知数，表示更复杂的关系。例如，方程 \\\\( 3x + 2y - z = 8 \\\\) 中，未知数是 **x**、**y** 和 **z**。\\n\\n### 7. **数学中的不同类型的未知数**：\\n- **自由变量**：在某些情况下，未知数的值不受其他变量的限制，它可以自由变化。例如，在函数 \\\\( y = 2x + 3 \\\\) 中，**x** 是自由变量。\\n- **参数**：在某些方程或系统中，未知数可能在某些特定条件下被称为参数（例如，表示函数中的常数）。例如，在方程 \\\\( y = mx + b \\\\) 中，**m** 和 **b** 是参数，它们的值可以不同，但对于给定的方程是已知的。\\n\\n### 8. **未知数的图形表示**：\\n在几何或代数中，未知数常常通过图形表示出来。例如：\\n- 一元方程 \\\\( y = x^2 \\\\) 描绘了一条抛物线，其中 **x** 是自变量，**y** 是未知数。\\n- 二元方程 \\\\( 2x + 3y = 6 \\\\) 描绘了一条直线，其中 **x** 和 **y** 是未知数。\\n\\n### 总结：\\n未知数是数学中用来表示尚未确定的数值的符号，它在代数方程、几何问题、统计分析等各类数学问题中扮演着关键角色。通过求解未知数，我们能够解决实际问题并得出具体结果。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 1494, 'prompt_tokens': 995, 'total_tokens': 2489, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-f1c499c0-f0f1-422e-b483-d55be569e7b2-0', usage_metadata={'input_tokens': 995, 'output_tokens': 1494, 'total_tokens': 2489, 'input_token_details': {}, 'output_token_details': {}})}"
+       "{'output_message': AIMessage(content='未知数是在代数方程中代表未知数量的符号或变量。未知数通常用字母表示，如x、y、z等。在解方程或求解问题时，未知数的值是需要确定的，通过代数运算或方程求解可以得到未知数的具体值。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 83, 'prompt_tokens': 111, 'total_tokens': 194, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-3fc27af3-a82c-4d45-a24b-33de51264a9f-0', usage_metadata={'input_tokens': 111, 'output_tokens': 83, 'total_tokens': 194, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,16 +339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='余弦是三角函数，表示角度的直角三角形邻边与斜边的比值。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 30, 'prompt_tokens': 32, 'total_tokens': 62, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-b9f04980-0220-4685-856b-af628cc7dd31-0', usage_metadata={'input_tokens': 32, 'output_tokens': 30, 'total_tokens': 62, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='余弦是三角函数中的一种，表示直角三角形中的邻边与斜边的比值。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 34, 'prompt_tokens': 56, 'total_tokens': 90, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-89a6c425-005e-4c03-b3aa-76a8d9159483-0', usage_metadata={'input_tokens': 56, 'output_tokens': 34, 'total_tokens': 90, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,16 +377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Cosine is a trigonometric function representing the ratio of adjacent side to hypotenuse in a right triangle.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 23, 'prompt_tokens': 32, 'total_tokens': 55, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-90ad36b3-4807-41a2-8cf5-d9ffda0967d6-0', usage_metadata={'input_tokens': 32, 'output_tokens': 23, 'total_tokens': 55, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='Cosine is a trigonometric function that represents the ratio of the adjacent side to the hypotenuse in a right triangle.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 27, 'prompt_tokens': 50, 'total_tokens': 77, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-66653df7-2837-4592-9137-e383a751a910-0', usage_metadata={'input_tokens': 50, 'output_tokens': 27, 'total_tokens': 77, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,16 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='The inverse of cosine is called arccosine or cos^-1, representing the angle whose cosine is a given value.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 25, 'prompt_tokens': 85, 'total_tokens': 110, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-90309ff0-de92-401f-b78a-396e4231a38b-0', usage_metadata={'input_tokens': 85, 'output_tokens': 25, 'total_tokens': 110, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='The inverse of cosine is called arccosine or cos^-1, and it returns the angle whose cosine is a given value.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 28, 'prompt_tokens': 88, 'total_tokens': 116, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-98dcc620-08ad-4296-8925-8c01ca3d9c43-0', usage_metadata={'input_tokens': 88, 'output_tokens': 28, 'total_tokens': 116, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
